---
config:
  layout: elk
---
classDiagram
    direction LR

%% ========== Infra / App ==========
    class DataStore {
        + users() Map~String, User~
        + posts() Map~Integer, Post~
        + trades() Map~Integer, Trade~
        + notifications() Map~Integer, Notification~
        + loadFromDisk() void
        + saveToDisk() void
    }
    class Snapshot {
        ~ Map~String, User~ users
        ~ Map~Integer, Post~ posts
        ~ Map~Integer, Trade~ trades
        ~ Map~Integer, Notification~ notifications
    }
    class Main {
        + main(String[]) void
        - DataStore store
        - AuthService auth
        - TradeService tradeService
        - PostService postService
        - NotificationService notificationService
        - AdminService adminService
    }

%% Relations
    DataStore --> Snapshot
    Main --> DataStore
    Main --> AuthService
    Main --> TradeService
    Main --> PostService
    Main --> NotificationService
    Main --> AdminService

%% DataStore ownership
    DataStore o-- Post
    DataStore o-- User
    DataStore o-- Trade
    DataStore o-- Notification
